Navbar update + painting descriptions on shop page
Deleted the pages we didnt cover in navbars in shop and home, added the pricing etc. in descriptions of the paintings in shop, hope that works xx

--- a/shop.html
+++ b/shop.html
@@ -15,9 +15,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="blog.html">Blog</a></li>
                 <li><a href="shop.html">Shop</a></li>
             </ul>
         </nav>
@@ -83,19 +81,29 @@
     <!-- Thumbnail images -->
     <div class="row">
       <div class="column">
-        <img class="demo cursor" src="./shopimages/img1.jpeg" style="height: 200px;" onclick="currentSlide(1)" alt="Leaving">
+        <img class="demo cursor" src="./shopimages/img1.jpeg" style="height: 200px;" onclick="currentSlide(1)" alt="Title: 'Leaving' <p>Size: 20 x 40 inches</p>
+        <p>Price: £39</p>
+        <p>Collection: 2020 Springs Later</p>">
       </div>
       <div class="column">
-        <img class="demo cursor" src="./shopimages/img2.jpg" style="height: 200px" onclick="currentSlide(2)" alt= "Warmth - Abstract">
+        <img class="demo cursor" src="./shopimages/img2.jpg" style="height: 200px" onclick="currentSlide(2)" alt= "Title: 'Warmth' <p>Size: 25 x 50 inches</p>
+        <p>Price: £45</p>
+        <p>Collection: 2020 Springs Later</p>">
       </div>
       <div class="column">
-        <img class="demo cursor" src="./shopimages/img3.jpg" style="height: 200px" onclick="currentSlide(3)" alt="Spaghetti Love">
+        <img class="demo cursor" src="./shopimages/img3.jpg" style="height: 200px" onclick="currentSlide(3)" alt="Title: 'Spaghetti Love' <p>Size: 15 x 30 inches</p>
+        <p>Price: £29</p>
+        <p>Collection: 2020 Springs Later</p>">
       </div>
       <div class="column">
-        <img class="demo cursor" src="./shopimages/img4.jpg" style="height: 200px" onclick="currentSlide(4)" alt="Good mornings">
+        <img class="demo cursor" src="./shopimages/img4.jpg" style="height: 200px" onclick="currentSlide(4)" alt="Title: 'Good Mornings' <p>Size: 20 x 40 inches</p>
+        <p>Price: £39</p>
+        <p>Collection: 2020 Springs Later</p>">
       </div>
       <div class="column">
-        <img class="demo cursor" src="./shopimages/img5.jpg" style="height: 200px" onclick="currentSlide(5)" alt="Friday">
+        <img class="demo cursor" src="./shopimages/img5.jpg" style="height: 200px" onclick="currentSlide(5)" alt="Title: 'Friday' <p>Size: 20 x 40 inches</p>
+        <p>Price: £39</p>
+        <p>Collection: 2020 Springs Later</p>">
       </div>
     </div>
   </div>
