--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel='stylesheet' href="style.css">
+        <link rel='stylesheet' href="./css/style.css">
         <script src="./appforindex.js"></script>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu">
     </head>
@@ -19,9 +19,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="blog.html">Blog</a></li>
                 <li><a href="shop.html">Shop</a></li>
             </ul>
         </nav>
