--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contactform.html">Contact</a></li>
                 <li><a href="shop.html">Shop</a></li>
             </ul>
         </nav>
